[package]
name = "slurpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
futures = { version = "0.3.21"}
reqwest = { version = "0.11.11", features = ["gzip","stream"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
futures-util = { version = "0.3.21" }